--- a/Tasks.Application/TaskManagement.Application.csproj
+++ b/Tasks.Application/TaskManagement.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tasks.Domain\TaskManagement.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
