--- a/Tasks.API/appsettings.json
+++ b/Tasks.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=TaskManagement;User Id=sa;Password=Tasks@123;"
+    "DefaultConnection": "Server=localhost,1433;Database=TaskManagement;User Id=sa;Password=Tasks@123;Integrated Security=false;TrustServerCertificate=True"
   }
 }
